name:                fay-builder
version:             0.1
synopsis:            Compile Fay code on cabal install, and ad-hoc recompile during development
license:             OtherLicense
author:              Silk B.V.
maintainer:          code@silk.co
copyright:           2013 Silk B.V.
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:    src
  default-language:  Haskell2010
  ghc-options:       -Wall
  exposed-modules:
    Fay.Builder
  build-depends:
      base >= 4 && < 5
    , Cabal
    , fay
    , text
    , split
    , directory
    , data-default
    , filepath
