name:                fay-builder
version:             0.1.0.2
synopsis:            Compile Fay code on cabal install, and ad-hoc recompile during development
license:             OtherLicense
author:              Silk B.V.
maintainer:          code@silk.co
copyright:           2013 Silk B.V.
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:    src
  default-language:  Haskell2010
  ghc-options:       -Wall
  exposed-modules:
    Fay.Builder
  build-depends:
      base         >= 4     && < 5
    , Cabal        >= 1.4   && < 1.19
    , fay          == 0.19.*
    , text         >= 0.11  && < 1.2
    , split        >= 0.2.2 && < 0.3
    , directory    >= 1.1   && < 1.3
    , data-default >= 0.5.3 && < 0.6
    , filepath     == 1.3.*
